--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 **/__pycache__/
 *.pyc
 02mblog/mblog/mblog/__pycache__/settings.cpython-313.pyc
-02mblog/mblog/db.sqlite3
+02mblog/mblog/mblog/__pycache__/urls.cpython-313.pyc
+
