templates DIR位置設定測試

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 02mblog/mblog/mblog/__pycache__/settings.cpython-313.pyc
 02mblog/mblog/mblog/__pycache__/urls.cpython-313.pyc
 
+02mblog/mblog/mblog/__pycache__/urls.cpython-313.pyc
