--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 02mblog/mblog/mblog/__pycache__/urls.cpython-313.pyc
 
 02mblog/mblog/mblog/__pycache__/urls.cpython-313.pyc
+02mblog/mblog/mblog/__pycache__/urls.cpython-313.pyc
