--- a/11mvote/mvote/requirements.txt
+++ b/11mvote/mvote/requirements.txt
@@ -1,19 +1,32 @@
--f /usr/share/pip-wheels
-asgiref==3.5.2
-certifi==2022.9.14
-cffi==1.15.1
-charset-normalizer==2.1.1
-cryptography==38.0.1
-defusedxml==0.7.1
-Django==4.0
-django-allauth==0.51.0
-idna==3.4
-oauthlib==3.2.1
-pycparser==2.21
-PyJWT==2.5.0
-python3-openid==3.2.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-sqlparse==0.4.2
-types-cryptography==3.3.23
-urllib3==1.26.12
+asgiref==3.9.1
+certifi==2025.8.3
+cffi==1.17.1
+charset-normalizer==3.4.3
+cryptography==45.0.6
+cssselect2==0.8.0
+Django==5.2.5
+django-allauth==65.11.1
+django-cart==1.0.4
+django-filer==3.3.1
+django-js-asset==3.1.2
+django-mptt==0.18.0
+django-paypal==2.1
+django-polymorphic==4.1.0
+django-shopping-cart==0.1
+easy-thumbnails==2.10.1
+idna==3.10
+lxml==6.0.1
+pillow==11.3.0
+pycparser==2.22
+PyJWT==2.10.1
+pytz==2025.2
+reportlab==4.4.3
+requests==2.32.5
+setuptools==78.1.1
+sqlparse==0.5.3
+svglib==1.5.1
+tinycss2==1.4.0
+tzdata==2025.2
+urllib3==2.5.0
+webencodings==0.5.1
+wheel==0.45.1
