新增09 mqtt圖表註解

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,35 @@
 
 02mblog/mblog/mblog/__pycache__/urls.cpython-313.pyc
 02mblog/mblog/mblog/__pycache__/urls.cpython-313.pyc
+091chart/chart/09-vote.csv
+091chart/chart/db-bak.sqlite3
+091chart/chart/db.sqlite3
+091chart/chart/manage.py
+091chart/chart/chart/__init__.py
+091chart/chart/chart/asgi.py
+091chart/chart/chart/settings.py
+091chart/chart/chart/urls.py
+091chart/chart/chart/wsgi.py
+091chart/chart/mysite/__init__.py
+091chart/chart/mysite/admin.py
+091chart/chart/mysite/apps.py
+091chart/chart/mysite/forms.py
+091chart/chart/mysite/models.py
+091chart/chart/mysite/tests.py
+091chart/chart/mysite/views.py
+091chart/chart/mysite/migrations/__init__.py
+091chart/chart/mysite/migrations/0001_initial.py
+091chart/chart/mysite/migrations/0002_profile.py
+091chart/chart/mysite/migrations/0003_vote.py
+091chart/chart/templates/base.html
+091chart/chart/templates/footer.html
+091chart/chart/templates/header.html
+091chart/chart/templates/index.html
+091chart/chart/templates/login.html
+091chart/chart/templates/mqtt.html
+091chart/chart/templates/plotly.html
+091chart/chart/templates/userinfo.html
+091chart/chart/templates/votes_table.html
+091chart/chart/templates/votes.html
+091chart/chart/mysite/migrations/0004_temperature.py
+091chart/chart/templates/temp.html
